fix: scrollbar color (#34)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,4 +6,5 @@ html,
 body,
 :root {
   position: relative;
+  color-scheme: dark;
 }
